--- a/app/options.html
+++ b/app/options.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="jquery.min.js"></script>
-    <script src="scripts/authorize.js"></script>
+    <script src="scripts/options.js"></script>
   </head>
 
   <body>
